# mvp

./: .gitignore  app.yaml  celerybeat-schedule.db  cfToS3.py  fcm.py  fireToDjango.py  get_firebase_token.py  gunicorn.conf.py  photo results.csv  productiondb_backup.sql  pyproject.toml  remove_fcm_test.py  test.py
authentication/: authentication.py  backend.py  firebase_auth.py  urls.py  views.py
biddings/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
biddings/migrations/: 0001_initial.py  0002_bidding_temp_user.py  0002_initial.py  0003_remove_bidding_user_id.py  0004_rename_temp_user_bidding_user.py  0005_alter_bidding_user.py
chats/: admin.py  consumers.py  models.py  serializers.py  urls.py  views.py
chats/migrations/: 0001_initial.py  0002_remove_message_chat_room_message_chat_message_image_and_more.py  0003_remove_chat_last_chat.py  0004_remove_chat_last_chat_date_chat_buyer_active_and_more.py
commons/: models.py
config/: __init__.py  asgi.py  celery_push_noti.py  routing.py  settings.py  urls.py  wsgi.py
items/: admin.py  filters.py  models.py  paginations.py  serializers.py  urls.py  views.py
items/migrations/: 0001_initial.py  0002_auctionitem_is_over.py  0002_auctionitem_used_period_fixedpriceitem_used_period.py  0002_item_is_liked_item_item_name.py  0003_remove_auctionitem_used_period_and_more.py  0003_rename_is_over_auctionitem_is_overdue_and_more.py  0003_rename_user_id_item_user_id_remove_item_location_and_more.py  0004_alter_auctionitem_location_and_more.py  0004_alter_item_category.py  0004_auctionitem_successful_bid_price.py  0005_alter_item_category.py  0005_auctionitem_used_period_fixedpriceitem_used_period.py  0007_alter_item_user_id.py  (+31 more)
migration/: file.py  fireToDjango.py  fixed.py  remove_image.py  test.py
migrations/: test.py
photos/: admin.py  models.py  serializers.py  urls.py  views.py
push_notification/: __init__.py  tasks.py
stats/: admin.py  item_daily_task.py  models.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
wishlists/: admin.py  models.py  serializers.py  urls.py  views.py
마이그레이션/: 0002_photo_item_uuid_photo_photo_uuid.py  0002_wishlist_wishlist_uuid_alter_wishlist_items.py  0013_auctionitem_fixedpriceitem.py  serializers copy.py  views copy.py
(+68 files in other folders)
