[tool.poetry]
name = "spacejump"
version = "0.1.0"
description = "spacejump mvp v1"
authors = ["woohoocheezy <woohoocheezy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.4"
django = "^4.2.1"
djangorestframework = "^3.14.0"
black = "^23.3.0"
python-dotenv = "^1.0.0"
mysql = "^0.0.3"
mysqlclient = "^2.1.1"
requests = "^2.31.0"
firebase-admin = "^6.1.0"
django-filter = "^23.2"
django-cors-headers = "^4.0.0"
pyfcm = "^1.5.4"
celery = "^5.3.0"
django-celery-results = "^2.5.1"
redis = "^4.5.5"
gunicorn = "^21.2.0"
djangorestframework-simplejwt = "^5.3.0"
channels = "^4.0.0"
channels-redis = "^4.1.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
setuptools = "^68.2.2"
mysql-connector-python = "^8.1.0"
boto3 = "^1.29.2"
pytz = "^2023.3.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
